attempt fixing paragraph spacing on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -73,7 +73,7 @@ h1
 #description
 {
   max-width: 80vw;
-  margin: 0 auto;
+  margin: 20px;
   padding: 20px;
   text-align: center;
 }
